pod-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: xabiere-pvc
spec:
  containers:
    - name: my-frontend
      image: nginx
      volumeMounts:
      - mountPath: "/data"
        name: my-volume
  volumes:
    - name: my-volume
      persistentVolumeClaim:
        claimName: pvc
