pod_named.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx2
  name: nginx2
spec:
  containers:
  - image: nginx
    name: nginx2
    ports:
    - containerPort: 80
      name: custom-http
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
