endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: xabiere-service
subsets:
  - addresses:
      - ip: 10.244.1.5
    ports:
      - port: 80
