service-selector.yaml
apiVersion: v1
kind: Service
metadata:
   name: xabiere-service-selector
spec:
   selector:
     app: nginx
   ports:
   - port: 80
     targetPort: 80
